[tool.poetry]
name = "assort-health-takehome"
version = "0.1.0"
description = "Assort Health AI Chat Agent Take Home Assignment"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openai = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

